# synthetic-learner-red-team-harness

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  metrics.json  parents.html  pyproject.toml  render.yaml  teacher.html
.cursor/rules/: clean-architecture.mdc  clean-code.mdc  simplicity-first.mdc  testing-python.mdc
docs/: architecture.md  baseline_vs_improved.md  decision_log.md  evaluation_method.md  failure_report_baseline.md  failure_report_improved.md  golden_set.md  limitations.md  recursive_improvement.md  research_notes.md  synthetic_learner_design.md  tutor_and_curriculum.md
scripts/: build_static.py
src/slh/: __init__.py  cli.py  comparator.py  curriculum.py  detectors.py  evaluator.py  goldenset.py  harness.py  learner.py  personas.py  protocol.py  report.py  session.py  tutor.py  web.py
tests/: test_curriculum.py  test_detectors_session.py  test_evaluator_comparator.py  test_goldenset.py  test_learner.py  test_personas.py  test_report_cli_harness.py  test_tutor.py  test_web.py
