[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-learner-harness"
version = "1.0.0"
description = "Synthetic Learner Red Team Harness — stress-test an AI fractions tutor with research-grounded synthetic students and recursively improve it."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pavan Kumar" }]
dependencies = []

[project.optional-dependencies]
# Optional: the FastAPI dashboard (`slh-web`). Not needed for the CLI or gates.
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
slh = "slh.cli:main"
slh-web = "slh.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=slh --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
